5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1667_2323.log
== TEST (2019-04-16 16:07:03) 
-- CODE:
nome = input("nome do bruxo: (SIRIUS/MALFOY)")

if nome == sirius.upper
-- ERROR:
File "XXXX", line 3
    if nome == sirius.upper
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:10) 
-- CODE:
nome = input("nome do bruxo: (SIRIUS/MALFOY)")

if nome == sirius.upper()
-- ERROR:
File "XXXX", line 3
    if nome == sirius.upper()
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:27) 
-- CODE:
nome = input("nome do bruxo: (SIRIUS/MALFOY)")

if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
	
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789

vel = esp / tem
print(vel)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:38) 
-- CODE:
nome = input("nome do bruxo: (SIRIUS/MALFOY)")

if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
	
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789

vel = esp / tem
print(vel)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:12:50) 
-- CODE:
nome = input("nome do bruxo: (SIRIUS/MALFOY)")

if nome == "sirius".upper():
	esp = 15.7654
	tem = 1.3479
	
else:
	nome == "malfoy".upper()
	esp = 7.674
	tem = 3.789

vel = esp / tem
print(vel)
-- EXECUTION TIME:
0.125893
-- TEST CASE 1:
---- input:
MALFOY
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
SIRIUS
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
